--- a/item/templates/inhouse/inhouse_update.html
+++ b/item/templates/inhouse/inhouse_update.html
@@ -6,7 +6,110 @@
   <i class="bi bi-box-fill inhouse-text-color"></i> Update In-house Reagent
 {% endblock panel_title %}
 {% block update_form %}
-  {{ form.non_field_errors }}
-  {{ form.errors }}
-  {{ form.as_p }}
+  <div class="px-3 pt-3">
+    <span class="text-danger small">{{ form.non_field_errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}</span>
+      {{ form.name }}
+      <span class="text-danger small">{{ form.name.errors }}</span>
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.product_id.label_tag }}</span>
+      {{ form.product_id }}
+      <span class="text-danger small">{{ form.product_id.errors }}</span>
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.lot_number.label_tag }}</span>
+      {{ form.lot_number }}
+      <span class="text-danger small">{{ form.lot_number.errors }}</span>
+    </div>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.expiry_date.label_tag }}</span>
+      {{ form.expiry_date }}
+      <span class="text-danger small">{{ form.expiry_date.errors }}</span>
+    </div>
+    {# quantity #}
+    <div class="row">
+      <div class="col-9">
+        <div class="input-group mb-3">
+          <span class="input-group-text input-group-text-fw-sm">{{ form.quantity.label_tag }}</span>
+          {{ form.quantity }}
+        </div>
+      </div>
+      <div class="col-3">
+        <div class="input-group mb-3">
+          <span class="input-group-text input-group-text-fw-sm">{{ form.quantity_unit.label_tag }}</span>
+          {{ form.quantity_unit }}
+        </div>
+      </div>
+    </div>
+    {# category type search input #}
+    <div id="category-input" class="type-search-input">{% include "category/partials/category_search_input.html" %}</div>
+    <span class="text-danger small">{{ form.category.errors }}</span>
+    <div class="input-group mb-3">
+      <span class="input-group-text input-group-text-fw-sm">{{ form.description.label_tag }}</span>
+      {{ form.description }}
+      <span class="text-danger small">{{ form.description.errors }}</span>
+    </div>
+    {{ formset.management_form }}
+    <div class="panel mt-4">
+      <div class="panel-heading d-flex justify-content-between align-items-center px-3">
+        <b>Add Components</b>
+        <a href="javascript:" id="add-more" class="btn btn-sm item-text-color">
+          <b><i class="bi bi-plus-circle"></i> Add</b>
+        </a>
+      </div>
+      <div class="panel-content">
+        <div id="formset-container">
+          {% for comp_form in formset %}
+            
+            <div class="reagent-component-form">
+              <div class="row py-2">
+                <div class="col-6">
+                  <div class="input-group">
+                    <span class="input-group-text">Reagent:</span>
+                    {{ comp_form.stock }}
+                  </div>
+                  <span class="text-danger small">{{ comp_form.stock.errors }}</span>
+                </div>
+                <div class="col-3">
+                  <div class="input-group">
+                    <span class="input-group-text">Quantity:</span>
+                    {{ comp_form.quantity }}
+                  </div>
+                  <span class="text-danger small">{{ comp_form.quantity.errors }}</span>
+                </div>
+                <div class="col-2">
+                  <div class="input-group">
+                    <span class="input-group-text">Unit:</span>
+                    {{ comp_form.quantity_unit }}
+                  </div>
+                  <span class="text-danger small">{{ comp_form.quantity_unit.errors }}</span>
+                </div>
+              </div>
+            </div>
+          {% endfor %}
+        </div>
+      </div>
+    </div>
+  </div>
 {% endblock update_form %}
+{% block js %}
+  <script>
+    // Array of configurations for each search box
+    const searchConfigurations = [
+    {
+        searchBoxId: "category_search_box",
+        textInputId: "id_category",
+        resultsDivId: "categorySearchResults",
+        resultClass: "category-search-result-category",
+        valueAttribute: "category-pk"
+    }
+    ];
+
+    // Initialize each search box listener
+    searchConfigurations.forEach(
+      config => TypeSearchResultListenerConfig(config)
+    );
+  </script>
+{% endblock js %}
