inhouse reagent update done

--- a/item/templates/inhouse/inhouse_list.html
+++ b/item/templates/inhouse/inhouse_list.html
@@ -42,7 +42,7 @@
       <!-- Actions -->
       <div class="col col-sm-1 d-none d-sm-block">
         <span class="tooltray-container d-none">
-          <a href="{% url 'inhouse_update' reagent.pk %}"><i class="bi bi-pencil-square"></i></a>
+          <a href="{% url 'inhouse_update' reagent.pk %}?next={{ request.path }}"><i class="bi bi-pencil-square"></i></a>
           <a hx-get="{% url 'inhouse_delete' reagent.pk %}"
              hx-trigger="click"
              hx-target="#crudModal .modal-content"
