--- a/item/templates/item/item_create.html
+++ b/item/templates/item/item_create.html
@@ -27,13 +27,13 @@
     <span class="text-danger">{{ form.product_id.errors }}</span>
     {# quantity #}
     <div class="row">
-      <div class="col-9">
+      <div class="col-6 col-lg-9">
         <div class="input-group mb-3">
           <span class="input-group-text input-group-text-fw-sm">{{ form.quantity.label_tag }}</span>
           {{ form.quantity }}
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-6 col-lg-3">
         <div class="input-group mb-3">
           <span class="input-group-text input-group-text-fw-sm">{{ form.quantity_unit.label_tag }}</span>
           {{ form.quantity_unit }}
