--- a/item/templates/inhouse/inhouse_create.html
+++ b/item/templates/inhouse/inhouse_create.html
@@ -11,31 +11,31 @@
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">{{ form.name.label_tag }}</span>
       {{ form.name }}
-      <span class="text-danger small">{{ form.name.errors }}</span>
     </div>
+    <span class="text-danger small">{{ form.name.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">{{ form.product_id.label_tag }}</span>
       {{ form.product_id }}
-      <span class="text-danger small">{{ form.product_id.errors }}</span>
     </div>
+    <span class="text-danger small">{{ form.product_id.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">{{ form.lot_number.label_tag }}</span>
       {{ form.lot_number }}
-      <span class="text-danger small">{{ form.lot_number.errors }}</span>
     </div>
+    <span class="text-danger small">{{ form.lot_number.errors }}</span>
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">{{ form.expiry_date.label_tag }}</span>
       {{ form.expiry_date }}
     </div>
     {# quantity #}
     <div class="row">
-      <div class="col-9">
+      <div class="col-6 col-lg-9">
         <div class="input-group mb-3">
           <span class="input-group-text input-group-text-fw-sm">{{ form.quantity.label_tag }}</span>
           {{ form.quantity }}
         </div>
       </div>
-      <div class="col-3">
+      <div class="col-6 col-lg-3">
         <div class="input-group mb-3">
           <span class="input-group-text input-group-text-fw-sm">{{ form.quantity_unit.label_tag }}</span>
           {{ form.quantity_unit }}
@@ -48,8 +48,8 @@
     <div class="input-group mb-3">
       <span class="input-group-text input-group-text-fw-sm">{{ form.description.label_tag }}</span>
       {{ form.description }}
-      <span class="text-danger small">{{ form.description.errors }}</span>
     </div>
+    <span class="text-danger small">{{ form.description.errors }}</span>
     {{ formset.management_form }}
     <div class="panel mt-4">
       <div class="panel-heading d-flex justify-content-between align-items-center px-3">
