--- a/item/templates/inhouse/inhouse_detail.html
+++ b/item/templates/inhouse/inhouse_detail.html
@@ -2,21 +2,19 @@
 {% block panel_title %}
   <i class="bi bi-box-fill inhouse-text-color"></i> {{ object.name }}
 {% endblock panel_title %}
-{% block panel_actions %}
-  <span class="p-1">
-    <a href="{% url 'inhouse_update' object.pk %}?next={{ request.path }}"
-       title="Update inhouse"
-       class="btn btn-sm btn-success">
-      <i class="bi bi-pencil-square"></i>
-      <span class="d-none d-sm-inline">Edit</span>
-    </a>
-  </span>
-{% endblock panel_actions %}
 {% block panel_content %}
   <div class="p-3">
     <div class="panel mb-4">
-      <div class="panel-heading d-flex justify-content-between">
+      <div class="panel-heading d-flex justify-content-between align-items-center">
         <span class="fw-bold"><i class="bi bi-info-circle-fill inhouse-text-color"></i> Reagent Details</span>
+        <span>
+          <a href="{% url 'inhouse_update' object.pk %}?next={{ request.path }}"
+             title="Update inhouse"
+             class="btn btn-sm btn-success">
+            <i class="bi bi-pencil-square"></i>
+            <span class="d-none d-sm-inline">Edit</span>
+          </a>
+        </span>
       </div>
       <div class="panel-content px-3 small">
         <div class="row mb-1">
@@ -49,8 +47,8 @@
       </div>
     </div>
     <div class="panel mb-4">
-      <div class="panel-heading d-flex justify-content-between">
-        <span class="fw-bold"><i class="bi bi-menu-button-wide-fill inhouse-text-color"></i> Reagent Components</span>
+      <div class="panel-heading d-flex justify-content-between align-items-center">
+        <span class="fw-bold"><i class="bi bi-menu-button-wide-fill text-danger"></i> Reagent Components</span>
       </div>
       <div class="panel-content px-3 small">
         <!-- Headings for larger screens -->
@@ -59,6 +57,7 @@
           <div class="col text-muted fw-bold">Lot Number</div>
           <div class="col text-muted fw-bold">Quantity</div>
           <div class="col text-muted fw-bold">Description</div>
+          <div class="col-1 text-center">{% include "partials/tooltray_toggle_icon.html" %}</div>
         </div>
         {% for c in reagent_components %}
           <div class="row g-2 mb-2 align-items-center">
@@ -71,6 +70,14 @@
             </div>
             <div class="col">{{ c.quantity_display }}</div>
             <div class="col">{{ c.stock.source.description }}</div>
+            <div class="col-1 text-center">
+              <span class="tooltray-container d-none">
+                <a href="{% url 'component_update' c.pk %}?next={{ request.path }}"
+                   title="Update components">
+                  <i class="bi bi-pencil-square"></i>
+                </a>
+              </span>
+            </div>
           </div>
         {% endfor %}
       </div>
